cleaning code and hardcoded to 5 days

--- a/untitled.html
+++ b/untitled.html
@@ -34,7 +34,7 @@
     <p>Departure Date:</p><br>
     <p id="dueDate"></p>
 
-
+    <script src="moment.js"></script>
     <script src="myScript.js"></script>
 </body>
 </html>
