--- a/index.html
+++ b/index.html
@@ -1,147 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Password Generator</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  
-    <style>
-
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
-
 <body>
+<!--  old code 
+    <form>
+        Select your arrival date:<br>
+        <input type="date" name="arrivalDate" id="arrivalForm" min="2020-02-12"><br><br>
+        Select your departure date:<br>
+        <input type="date" name="departureDate" id="departureForm" min="2020-02-12"><br><br>
+       
+    </form>
 
-    <div class="jumbotron text-center" style="margin-bottom:0">
-        <h1>Password Generator</h1>
-        <br>
-        <p><strong>Choose the type of password you want to generate</p>
-        </strong></p>
-    </div>
-<br>
-<br>
-<br>
-<!-- User data input coding 
-<div class="container-fluid">
-    <div class="row"></div>
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8"></div>
-    <h6 style="text-align: center;">Length of password?
-    <input type="number" id="length" min='8' max='128' value=''/></h6>
-</div>
--->
-
-
-<div class="container-fluid">
-    <div class="row"></div>
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8"></div>
-    <h6 style="text-align: center;">Length of password (between 8 - 128):
-    <input type = "number" id="length" value= '' /></h6>
-</div>
-
-
-    <div class="container-fluid">
-        <div class="row"></div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8"></div>
-        <h6 style="text-align: center;">Uppercase characters? <input type="checkbox" id="uppercase" checked /></h6>
-        <div class="col-sm-2"></div>
-    </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row"></div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8"></div>
-        <h6 style="text-align: center;">Lowercase characters? <input type="checkbox" id="lowercase" checked /></h6>
-        <div class="col-sm-2"></div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row"></div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8"></div>
-        <h6 style="text-align: center;">Include numbers? <input type="checkbox" id="numbers" checked /></h6>
-        <div class="col-sm-2"></div>
-        </div>
-
-    <div class="container-fluid">
-        <div class="row"></div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8"></div>
-        <h6 style="text-align: center;">Special characters? <input type="checkbox" id="symbols" checked /></h6>
-        <div class="col-sm-2"></div>
-        </div>
-    </div>
     <br>
+    <button onclick="submitDates()">Submit Dates</button>
     <br>
+    <p id="demo"></p>
 
-    <!--User output coding-->
-
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" style="text-align:center;"><button type="button" 
-            id="generate">Click to generate a password</button></div>
-        <div class="col-sm-2"></div>
-    <br>
-    <br>
-    <!--
-    <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" style="text-align:center;">Here is your password:</div>
-        <div class="result"><id="result"></id></div>
-        <div class="col-sm-2"></div>
-    </div>
--->
-<div class="result-container">
-    <span id="result"></span>
-    <button class="btn" id="clipboard">
-        <i class="far fa-clipboard"></i>
-    </button>
-</div>
-
-
-
-<!-- this is messy 
     
-    <div class="container-fluid">
-        <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8"></div>
-        <h6 style="text-align:center;"> Here is your password:
-        <button class="btn" id="clipboard">
-        <i class="far fa-clipboard"></i>
-        </button>
-        <div class="col-sm-2"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <br>
-            <h3 style="text-align:center;" id="pwd"></h3>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" style="text-align:center;">
-            <br>
-            <p>Copy password to clipboard. </p>
-            <input style="text-align:center;" type="text" id="pwdGen">
-            <button onclick="copyText()">Copy text</button>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
+    <p id="aDate">arrival date</p>
+    <p id="dDate">departure date</p>
 -->
 
-<script src="script.js"></script>
-</body>
+    Select Your Arrival Date:<br> 
+    <input type="date" id="invoiceDate"> <br><br> Nights to Getaway: 
+    <br>
+    <input type="text" id="days"> <br><br>
+    <button id="addDays">Calculate Days to pass to API</button> <br><br> 
+    <p>Departure Date:</p><br>
+    <p id="dueDate"></p>
 
+    <script src="moment.js"></script>
+    <script src="myScript.js"></script>
+</body>
 </html>
